--- a/patient.html
+++ b/patient.html
@@ -272,7 +272,8 @@
 
   <script>
     // ========== YOUR RENDER URL ==========
-    const API_BASE_URL = 'https://final-medilong-2.onrender.com';
+    const API_BASE_URL = 'https://proj-medilong.onrender.com';
+
     // ====================================
     
     // Form submission handler
