--- a/doctor.html
+++ b/doctor.html
@@ -225,7 +225,8 @@
 
   <script>
     // Your Render URL
-    const API_BASE_URL = 'https://final-medilong-2.onrender.com';
+    const API_BASE_URL = 'https://proj-medilong.onrender.com';
+
 
     // Update clock
     function updateClock() {
