--- a/reception.html
+++ b/reception.html
@@ -93,7 +93,8 @@
   </div>
   <script>
     // Set your Render API URL
-    const API_BASE_URL = 'https://final-medilong-2.onrender.com';
+    const API_BASE_URL = 'https://proj-medilong.onrender.com';
+
 
     let allPatients = [];
     let filteredPatients = [];
